home page; routing logs;

--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/tsconfig.json
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "./src",
+    "paths": {
+      "@log_services/*": [ "app/_services/*" ],
+      "@log_models": [ "app/_models/index.ts" ]
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
