--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/package.json
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "bootstrap": "^4.4.1",
+    "@progress/kendo-angular-common": "^1.1.0",
+    "@progress/kendo-angular-l10n": "^2.0.0",
+    "@progress/kendo-angular-upload": "^5.1.0",
+    "@progress/kendo-theme-default": "latest",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
