--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/LogFileAnalysisApplication.csproj
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/LogFileAnalysisApplication.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LogFileAnalysisDAL\LogFileAnalysisDAL.csproj" />
+    <ProjectReference Include="..\ProcessLogFilesDLL\ProcessLogFilesDLL.csproj" />
   </ItemGroup>
 
 
