--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -21,11 +21,12 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
-    "bootstrap": "^4.4.1",
+    "@aspnet/signalr": "^1.1.4",
     "@progress/kendo-angular-common": "^1.1.0",
     "@progress/kendo-angular-l10n": "^2.0.0",
     "@progress/kendo-angular-upload": "^5.1.0",
     "@progress/kendo-theme-default": "latest",
+    "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
