--- a/LogFileAnalysisApplication/ProcessLogFilesDLL/ProcessLogFilesDLL.csproj
+++ b/LogFileAnalysisApplication/ProcessLogFilesDLL/ProcessLogFilesDLL.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
