--- a/LogFileAnalysisApplication/ProcessLogFilesDLL/ProcessLogFilesDLL.csproj
+++ b/LogFileAnalysisApplication/ProcessLogFilesDLL/ProcessLogFilesDLL.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <ProjectReference Include="..\LogFileAnalysisDAL\LogFileAnalysisDAL.csproj" />
   </ItemGroup>
 
 </Project>
