show logs objects

--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/LogFileAnalysisApplication.csproj
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/LogFileAnalysisApplication.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\LogFileAnalysisDAL\LogFileAnalysisDAL.csproj" />
     <ProjectReference Include="..\ProcessLogFilesDLL\ProcessLogFilesDLL.csproj" />
+    <ProjectReference Include="..\ShowLogObjectsDLL\ShowLogObjectsDLL.csproj" />
   </ItemGroup>
 
 
