--- a/LogFileAnalysisApplication/ShowLogObjectsDLL/ShowLogObjectsDLL.csproj
+++ b/LogFileAnalysisApplication/ShowLogObjectsDLL/ShowLogObjectsDLL.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LogFileAnalysisDAL\LogFileAnalysisDAL.csproj" />
+  </ItemGroup>
+
 </Project>
