--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -26,6 +26,7 @@
     "@progress/kendo-angular-l10n": "^2.0.0",
     "@progress/kendo-angular-upload": "^5.1.0",
     "@progress/kendo-theme-default": "latest",
+    "angular2-query-builder": "^0.6.2",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "ng-material-treetable": "^0.5.5",
