--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/LogFileAnalysisApplication.csproj
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/LogFileAnalysisApplication.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\AnswerLogObjectDLL\AnswerLogObjectDLL.csproj" />
     <ProjectReference Include="..\ErrorLogObjectDLL\ErrorLogObjectDLL.csproj" />
     <ProjectReference Include="..\LogFileAnalysisDAL\LogFileAnalysisDAL.csproj" />
+    <ProjectReference Include="..\LogQueryBuilderDLL\LogQueryBuilderDLL.csproj" />
     <ProjectReference Include="..\ProcessLogFilesDLL\ProcessLogFilesDLL.csproj" />
     <ProjectReference Include="..\ShowLogObjectsDLL\ShowLogObjectsDLL.csproj" />
     <ProjectReference Include="..\StatusErrorDLL\StatusErrorDLL.csproj" />
